# subalfred

./: Cargo.toml
src/subalfred/core/error/: mod.rs
substrate-minimal/submetadatan/src/: cmpx.rs  error.rs  lib.rs  metadatan.rs
substrate-minimal/substorager/src/: lib.rs
substrate-minimal/subtypes/: Cargo.toml
substrate-minimal/subtypes/src/: lib.rs
substrater/: Cargo.toml
substrater/src/: error.rs  lib.rs  substrater.rs
